the icon changes when the user clicks to add to favorites

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <!-- UIKIT -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.6/css/uikit.min.css" />
-
+    <!-- Icons from fontawesome -->
+    <script src="https://kit.fontawesome.com/c0a664ee11.js"></script>
     <title>React App</title>
   </head>
   <body>
