--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.6/css/uikit.min.css" />
     <!-- Icons from fontawesome -->
     <script src="https://kit.fontawesome.com/c0a664ee11.js"></script>
-    <title>React App</title>
+    <title>Events hunter</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
